# pico_uart_echo

./: CMakeLists.txt  main.c
